Fix spacing between opinion hero and prebody when no caption

--- a/_docker/drupal/drupal-filesystem/web/themes/custom/rhdp/rhd-frontend/src/styles/_articles.scss
+++ b/_docker/drupal/drupal-filesystem/web/themes/custom/rhdp/rhd-frontend/src/styles/_articles.scss
@@ -14,9 +14,13 @@
       margin-left: -3px;
       margin-right: -3px;
     }
+    img {
+      margin-bottom: 40px;
+    }
     figcaption {
       font-size: 10px;
       text-align: right;
+      margin-top: -40px;
       p, ol, ul {
         margin-top: 1em;
         margin-bottom: 1em;
