--- a/_docker/drupal/drupal-filesystem/web/themes/custom/rhdp/rhd-frontend/styles/rhd.css
+++ b/_docker/drupal/drupal-filesystem/web/themes/custom/rhdp/rhd-frontend/styles/rhd.css
@@ -10656,9 +10656,12 @@ body.microsite-multi-page nav.top-bar, body.microsite nav.top-bar {
       #rhd-article .article-hero {
         margin-left: -3px;
         margin-right: -3px; } }
+    #rhd-article .article-hero img {
+      margin-bottom: 40px; }
     #rhd-article .article-hero figcaption {
       font-size: 10px;
-      text-align: right; }
+      text-align: right;
+      margin-top: -40px; }
       #rhd-article .article-hero figcaption p, #rhd-article .article-hero figcaption ol, #rhd-article .article-hero figcaption ul {
         margin-top: 1em;
         margin-bottom: 1em; }
